# ROAM-example

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
multi_sim_init/: CMakeLists.txt  package.xml
multi_sim_init/launch/: backup.launch  robot1.launch  robot2.launch  semantic_init.launch  semantic_init_multi.launch
multi_sim_init/models/: husky.sdf  husky_backup.sdf  office.sdf  world.sdf
multi_sim_init/models/office_world/: metadata.pbtxt  model.sdf
multi_sim_init/models/office_world/meshes/: carpets.dae  ground.dae  monitors.dae  rest.dae  tables.dae  walls.dae
multi_sim_init/rviz/: semantic_room.rviz
multi_sim_init/scripts/: dynamic_tf.py
