<?xml version="1.0"?>
<package format="3">
  <name>multi_sim_init</name>
  <version>0.0.0</version>
  <description>The multi_sim_init package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="root@todo.todo">root</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- Fortress -->
  <exec_depend condition="$IGNITION_VERSION == fortress">ignition-gazebo6</exec_depend>
  <!-- Edifice -->
  <exec_depend condition="$IGNITION_VERSION == edifice">ignition-gazebo5</exec_depend>
  <!-- Citadel (default) -->
  <exec_depend condition="$IGNITION_VERSION == citadel">ignition-gazebo3</exec_depend>
  <exec_depend condition="$IGNITION_VERSION == ''">ignition-gazebo3</exec_depend>

  <exec_depend>ros_ign_gazebo</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
